--- a/docs/style.css
+++ b/docs/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-    background-color: #f8f9fa;
+    background-color: #000000;
     padding: 20px;
     text-align: center;
 }
