--- a/docs/style.css
+++ b/docs/style.css
@@ -2,6 +2,40 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.fadeIn {
+    animation-name: fadeInAnime;
+    animation-duration:3s;
+    animation-fill-mode:forwards;
+    opacity: 0;
+    }
+    
+    @keyframes fadeInAnime{
+    0% {
+        opacity: 0;
+    }
+    
+    100% {
+        opacity: 1;
+    }
+    }
+
+.fadeIn2 {
+    animation-name: fadeInAnime;
+    animation-duration:3s;
+    animation-fill-mode:forwards;
+    opacity: 0;
+    }
+    
+    @keyframes fadeInAnime{
+    0% {
+        opacity: 0;
+    }
+    
+    100% {
+        opacity: 1;
+    }
+    }
+
 header {
     background-color: #555;
     padding: 20px;
@@ -17,31 +51,3 @@ footer {
     padding: 20px;
     text-align: center;
 }
-
-.wrap-video{
-    position:relative;
-  }
-  
-  .wrap-video video{
-    width: 100%;
-    height:100%
-  }
-  
-  .wrap-video .text{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); /*上下左右中央寄せ*/
-    text-align:center;
-  }
-  
-  .wrap-video .text p{
-    font-size:16px;
-    font-weight:bold;
-    color:white;
-  }
-  
-  .wrap-video .text .headline{
-    font-size:20px;
-  }
