--- a/docs/style.css
+++ b/docs/style.css
@@ -1,53 +1,45 @@
-body {
-    font-family: Arial, sans-serif;
+/* Loading背景画面設定　*/
+#splash {
+    /*fixedで全面に固定*/
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	text-align:center;
+	color:#fff;
 }
 
-.fadeIn {
-    animation-name: fadeInAnime;
-    animation-duration:3s;
-    animation-fill-mode:forwards;
-    opacity: 0;
-    }
-    
-    @keyframes fadeInAnime{
-    0% {
-        opacity: 0;
-    }
-    
-    100% {
-        opacity: 1;
-    }
-    }
-
-.fadeIn2 {
-    animation-name: fadeInAnime;
-    animation-duration:3s;
-    animation-fill-mode:forwards;
-    opacity: 0;
-    }
-    
-    @keyframes fadeInAnime{
-    0% {
-        opacity: 0;
-    }
-    
-    100% {
-        opacity: 1;
-    }
-    }
-
-header {
-    background-color: #555;
-    padding: 20px;
-    text-align: center;
+/* Loading画像中央配置　*/
+#splash_text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+    z-index: 999;
+	transform: translate(-50%, -50%);
+	color: #fff;
+	width: 100%;
 }
 
-section {
-    margin: 20px 0;
+/*割れる画面のアニメーション*/
+.loader_cover {
+    width: 100%;
+    height: 50%;
+    background-color: #333;
+    transition: all .2s cubic-bezier(.04, .435, .315, .9);
+    transform: scaleY(1);
+}
+/*上の画面*/
+.loader_cover-up {
+    transform-origin: center top;
 }
 
-footer {
-    background-color: #f8f9fa;
-    padding: 20px;
-    text-align: center;
+/*下の画面*/
+.loader_cover-down {
+    position: absolute;
+    bottom: 0;
+    transform-origin: center bottom;
+}
+/*クラス名がついたらY軸方向に0*/
+.coveranime {
+    transform: scaleY(0);
 }
