--- a/docs/style.css
+++ b/docs/style.css
@@ -52,12 +52,14 @@
 
 .header-logo {
     float: left;
+    color: #fff;
     font-size: 36px;
     padding: 20px 40px;
 }
 
 .header-list li {
     float: left;
+    color: #fff;
     padding: 33px 20px;
 }
 
@@ -83,11 +85,11 @@
 
   /* copy-containerの中のspanの色を指定してください */
 .copy-container span {
-    color: #ff4a4a;
+    color: #ffb5e6;
 }
 
 .footer {
-    background-color: #2f5167;
+    background-color: #303030;
     color: #fff;
     height: 120px;
     padding: 40px;
@@ -114,7 +116,7 @@
     /*リンクの形状*/
 	display:inline-block;
     text-decoration: none;
-    color: #333;
+    color: #fff;
     outline: none;
 }
 
@@ -126,7 +128,7 @@
     left:30%;
     top:0;
     /*波形の形状*/
-    border: 1px solid #333;
+    border: 1px solid #ffffff;
     width: 60px;
     height: 60px;
     border-radius: 50%;
