--- a/docs/style.css
+++ b/docs/style.css
@@ -121,12 +121,29 @@
 
 .btnripple3{
     /*波紋の基点とするためrelativeを指定*/
-	position: relative;
+    position: relative;
     /*リンクの形状*/
-	display:inline-block;
+    display:inline-block;
+    margin:0 10px 20px 10px;
     text-decoration: none;
+    color: #333;
+    outline: none;
+}
+
+body{
+    vertical-align:middle; 
+    padding: 100px 0;
+    text-align: center;
+}
+
+p{
+    margin: 0 0 10px 0;
+}
+
+li {
+    list-style: none;
     float: left;
-    color: #fff;
+    /* 上下のpaddingを33px、左右のpaddingを20pxにしてください */
     padding: 33px 20px;
 }
 
