--- a/docs/style.css
+++ b/docs/style.css
@@ -124,7 +124,7 @@
     position: relative;
     /*リンクの形状*/
     display:inline-block;
-    margin: 10px 40px 10px;
+    margin:0 10px 20px 10px;
     text-decoration: none;
     color: #fff;
     outline: none;
