--- a/docs/style.css
+++ b/docs/style.css
@@ -1,47 +1,55 @@
+@charset "utf-8";
+/*========= LoadingのためのCSS ===============*/
+
 /* Loading背景画面設定　*/
+
 #splash {
     /*fixedで全面に固定*/
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	z-index: 999;
-	text-align:center;
-	color:#fff;
-}
-
-/* Loading画像中央配置　*/
-#splash_text {
-	position: absolute;
-	top: 50%;
-	left: 50%;
+    position: fixed;
     z-index: 999;
-	transform: translate(-50%, -50%);
-	color: #fff;
-	width: 100%;
-}
-
-/*割れる画面のアニメーション*/
-.loader_cover {
     width: 100%;
-    height: 50%;
-    background-color: #202020;
-    transition: all .2s cubic-bezier(.04, .435, .315, .9);
-    transform: scaleY(1);
-}
-/*上の画面*/
-.loader_cover-up {
-    transform-origin: center top;
+    height: 100%;
+    background:#333;
+    text-align:center;
+    color:#fff;
 }
 
-/*下の画面*/
-.loader_cover-down {
+/* Loadingバー中央配置　*/
+#splash_text {
     position: absolute;
-    bottom: 0;
-    transform-origin: center bottom;
+    top: 50%;
+    left: 50%;
+        z-index: 999;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    color: #fff;
 }
-/*クラス名がついたらY軸方向に0*/
-.coveranime {
-    transform: scaleY(0);
+
+/*IE11対策用バーの線の高さ※対応しなければ削除してください*/
+#splash_text svg{
+    height: 2px;
+}
+
+/*========= レイアウトのためのCSS ===============*/
+
+
+#container{
+    width:100%;
+    height: 100vh;
+    background: #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+a{
+    color: #333;
+}
+
+a:hover{
+    text-decoration: none;   
 }
 
 .header {
