--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,10 @@
 @charset "utf-8";
-/*========= LoadingのためのCSS ===============*/
 
 /* Loading背景画面設定　*/
+body {
+    font-family: "Hiragino Kaku Gothic ProN";
+    letter-spacing: .05em;
+}
 
 #splash {
     /*fixedで全面に固定*/
