--- a/docs/style.css
+++ b/docs/style.css
@@ -1,187 +1,251 @@
 @charset "utf-8";
 
+
 /* Loading背景画面設定　*/
 body {
-    font-family: "Hiragino Kaku Gothic ProN";
-    letter-spacing: .05em;
+font-family: "Hiragino Kaku Gothic ProN";
+letter-spacing: .05em;
 }
 
+
 #splash {
-    /*fixedで全面に固定*/
-    position: fixed;
-    z-index: 999;
-    width: 100%;
-    height: 100%;
-    background:#333;
-    text-align:center;
-    color:#fff;
+/*fixedで全面に固定*/
+position: fixed;
+z-index: 999;
+width: 100%;
+height: 100%;
+background:#333;
+text-align:center;
+color:#fff;
 }
+
 
 /* Loadingバー中央配置　*/
 #splash_text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-        z-index: 999;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    color: #fff;
+position: absolute;
+top: 50%;
+left: 50%;
+z-index: 999;
+width: 100%;
+transform: translate(-50%, -50%);
+color: #fff;
 }
+
 
 /*IE11対策用バーの線の高さ※対応しなければ削除してください*/
 #splash_text svg{
-    height: 2px;
+height: 2px;
 }
+
 
 /*========= レイアウトのためのCSS ===============*/
 
 
+
+
 #container{
-    width:100%;
-    height: 100vh;
-    background: #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+width:100%;
+height: 100vh;
+background: #ccc;
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
 }
+
+
 
 
 a{
-    color: #333;
+color: #333;
 }
+
 
 a:hover{
-    text-decoration: none;   
+text-decoration: none;
 }
+
 
 .header {
-    background-color: #202020;
-    color: #fff;
-    height: 90px;
+background-color: #202020;
+color: #fff;
+height: 90px;
 }
+
 
 .header-list{
-    list-style: none;
+list-style: none;
 }
 .header-logo {
-    float: left;
-    color: #fff;
-    font-size: 36px;
-    padding: 20px 40px;
+float: left;
+color: #fff;
+font-size: 36px;
+padding: 20px 40px;
 }
+
 
 .header-list li {
-    float: left;
-    color: #fff;
-    padding: 33px 20px;
-    list-style: none;
+float: left;
+color: #fff;
+padding: 33px 20px;
+list-style: none;
 }
+
 
 .main {
-    /* background-colorの指定を消してください */
-    
-    /* heightの指定を消してください */
-    
-    /* 上下のpaddingを100px、左右のpaddingを80pxにしてください */
-    padding: 100px 80px;
-    
+/* background-colorの指定を消してください */
+/* heightの指定を消してください */
+/* 上下のpaddingを100px、左右のpaddingを80pxにしてください */
+padding: 100px 80px;
 }
 
-  /* copy-containerの中のh1のfont-sizeを指定してください */
+
+/* copy-containerの中のh1のfont-sizeを指定してください */
 .copy-container h1 {
-    font-size: 140px;
+font-size: 140px;
 }
 
-  /* copy-containerの中のh2のfont-sizeを指定してください */
+
+/* copy-containerの中のh2のfont-sizeを指定してください */
 .copy-container h2 {
-    font-size: 60px;
+font-size: 60px;
 }
 
-  /* copy-containerの中のspanの色を指定してください */
+
+/* copy-containerの中のspanの色を指定してください */
 .copy-container span {
-    color: #ffb5e6;
+color: #ffb5e6;
 }
+
 
 .footer {
-    background-color: #202020;
-    color: #fff;
-    height: 120px;
-    padding: 40px;
+background-color: #202020;
+color: #fff;
+height: 120px;
+padding: 40px;
 }
+
 
 .footer-logo {
-    float: left;
-    font-size: 32px;
-    color: #fff;
+float: left;
+font-size: 32px;
+color: #fff;
 }
+
 
 .footer-list {
-    float: right;
-    color: #fff;
+float: right;
+color: #fff;
 }
 
+
 .footer-list li {
-    padding-bottom: 20px;
-    float: left;
-    color: #fff;
-    list-style: none;
+padding-bottom: 20px;
+float: left;
+color: #fff;
+list-style: none;
 }
+
 
 /*== 波紋がふわっと広がる */
 
+
 .btnripple3{
-    /*波紋の基点とするためrelativeを指定*/
-    position: relative;
-    /*リンクの形状*/
-    display:inline-block;
-    margin:0 10px 20px 10px;
-    text-decoration: none;
-    color: #fff;
-    outline: none;
+/*波紋の基点とするためrelativeを指定*/
+position: relative;
+/*リンクの形状*/
+display:inline-block;
+margin:0 10px 20px 10px;
+text-decoration: none;
+color: #fff;
+outline: none;
 }
+
 
 body{
-    vertical-align:middle; 
-    text-align: center;
+vertical-align:middle;
+text-align: center;
 }
+
 
 p{
-    margin: 0 0 10px 0;
+margin: 0 0 10px 0;
 }
 
+
 li {
-    list-style: none;
-    float: left;
-    /* 上下のpaddingを33px、左右のpaddingを20pxにしてください */
-    padding: 33px 20px;
+list-style: none;
+float: left;
+padding: 33px 20px;
 }
+
 
 /*波形の設定*/
 .btnripple3:hover::before {
-    content: '';
-    /*絶対配置で波形の位置を決める*/
-    position: absolute;
-    left:30%;
-    top:0;
-    /*波形の形状*/
-    border: 1px solid #fff;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    /*はじめは不透明*/
-	opacity:1;
-    /*アニメーションの設定*/
-    animation:1s circleanime2 forwards;
+content: '';
+/*絶対配置で波形の位置を決める*/
+position: absolute;
+left:30%;
+top:0;
+/*波形の形状*/
+border: 1px solid #fff;
+width: 60px;
+height: 60px;
+border-radius: 50%;
+/*はじめは不透明*/
+opacity:1;
+/*アニメーションの設定*/
+animation:1s circleanime2 forwards;
 }
+
 
 /*波形が広がるアニメーション*/
 @keyframes circleanime2{
-	0%{
-	transform: scale(0);
-	}
-	100%{
-		transform:scale(2);
-		opacity: 0;
-	}
+0%{
+transform: scale(0);
 }
+100%{
+transform:scale(2);
+opacity: 0;
+}
+}
+.works-list {
+display: flex;
+flex-wrap: wrap;
+margin-bottom: -40px;
+}
+.works-item {
+width: 31.74603%;
+margin-right: 1.58730%;
+margin-bottom: 40px;
+color: #333;
+}
+
+
+.works-item:hover {
+opacity: .9;
+}
+
+
+.works-item:nth-of-type(3n) {
+margin-right: 0;
+}
+
+
+.works-img img {
+border: 1px solid #e6e6e6;
+}
+
+
+.works-name {
+font-size: 12px;
+font-weight: bold;
+margin-top: 8px;
+}
+
+
+.works-info {
+font-size: 10px;
+margin-top: 5px;
+}
+
