--- a/docs/style.css
+++ b/docs/style.css
@@ -3,38 +3,38 @@
 
 /* Loading背景画面設定　*/
 body {
-font-family: "Hiragino Kaku Gothic ProN";
-letter-spacing: .05em;
+    font-family: "Hiragino Kaku Gothic ProN";
+    letter-spacing: .05em;
 }
 
 
 #splash {
-/*fixedで全面に固定*/
-position: fixed;
-z-index: 999;
-width: 100%;
-height: 100%;
-background:#333;
-text-align:center;
-color:#fff;
+    /*fixedで全面に固定*/
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    text-align: center;
+    color: #fff;
 }
 
 
 /* Loadingバー中央配置　*/
 #splash_text {
-position: absolute;
-top: 50%;
-left: 50%;
-z-index: 999;
-width: 100%;
-transform: translate(-50%, -50%);
-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 999;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    color: #fff;
 }
 
 
 /*IE11対策用バーの線の高さ※対応しなければ削除してください*/
-#splash_text svg{
-height: 2px;
+#splash_text svg {
+    height: 2px;
 }
 
 
@@ -43,231 +43,238 @@ height: 2px;
 
 
 
-#container{
-width:100%;
-height: 100vh;
-background: #ccc;
-display: flex;
-justify-content: center;
-align-items: center;
-text-align: center;
+#container {
+    width: 100%;
+    height: 100vh;
+    background: #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 
 
 
-a{
-color: #333;
+a {
+    color: #333;
 }
 
 
-a:hover{
-text-decoration: none;
+a:hover {
+    text-decoration: none;
 }
 
 
 .header {
-background-color: #202020;
-color: #fff;
-height: 90px;
+    background-color: #202020;
+    color: #fff;
+    height: 90px;
 }
 
 
-.header-list{
-list-style: none;
+.header-list {
+    list-style: none;
 }
+
 .header-logo {
-float: left;
-color: #fff;
-font-size: 36px;
-padding: 20px 40px;
+    float: left;
+    color: #fff;
+    font-size: 36px;
+    padding: 20px 40px;
 }
 
 
 .header-list li {
-float: left;
-color: #fff;
-padding: 33px 20px;
-list-style: none;
+    float: left;
+    color: #fff;
+    padding: 33px 20px;
+    list-style: none;
 }
 
 
 .main {
-/* background-colorの指定を消してください */
-/* heightの指定を消してください */
-/* 上下のpaddingを100px、左右のpaddingを80pxにしてください */
-padding: 100px 80px;
+    /* background-colorの指定を消してください */
+    /* heightの指定を消してください */
+    /* 上下のpaddingを100px、左右のpaddingを80pxにしてください */
+    padding: 100px 80px;
 }
 
 
 /* copy-containerの中のh1のfont-sizeを指定してください */
 .copy-container h1 {
-font-size: 140px;
+    font-size: 140px;
 }
 
 
 /* copy-containerの中のh2のfont-sizeを指定してください */
 .copy-container h2 {
-font-size: 60px;
+    font-size: 60px;
 }
 
 
 /* copy-containerの中のspanの色を指定してください */
 .copy-container span {
-color: #ffb5e6;
+    color: #ffb5e6;
 }
 
 
 .footer {
-background-color: #202020;
-color: #fff;
-height: 120px;
-padding: 40px;
+    background-color: #202020;
+    color: #fff;
+    height: 120px;
+    padding: 40px;
 }
 
 
 .footer-logo {
-float: left;
-font-size: 32px;
-color: #fff;
+    float: left;
+    font-size: 32px;
+    color: #fff;
 }
 
 
 .footer-list {
-float: right;
-color: #fff;
+    float: right;
+    color: #fff;
 }
 
 
 .footer-list li {
-padding-bottom: 20px;
-float: left;
-color: #fff;
-list-style: none;
+    padding-bottom: 20px;
+    float: left;
+    color: #fff;
+    list-style: none;
 }
 
 
 /*== 波紋がふわっと広がる */
 
 
-.btnripple3{
-/*波紋の基点とするためrelativeを指定*/
-position: relative;
-/*リンクの形状*/
-display:inline-block;
-margin:0 10px 20px 10px;
-text-decoration: none;
-color: #fff;
-outline: none;
+.btnripple3 {
+    /*波紋の基点とするためrelativeを指定*/
+    position: relative;
+    /*リンクの形状*/
+    display: inline-block;
+    margin: 0 10px 20px 10px;
+    text-decoration: none;
+    color: #fff;
+    outline: none;
 }
 
 
-body{
-vertical-align:middle;
-text-align: center;
+body {
+    vertical-align: middle;
+    text-align: center;
 }
 
 
-p{
-margin: 0 0 10px 0;
+p {
+    margin: 0 0 10px 0;
 }
 
 
 li {
-list-style: none;
-float: left;
-padding: 33px 20px;
+    list-style: none;
+    float: left;
+    padding: 33px 20px;
 }
 
 
 /*波形の設定*/
 .btnripple3:hover::before {
-content: '';
-/*絶対配置で波形の位置を決める*/
-position: absolute;
-left:30%;
-top:0;
-/*波形の形状*/
-border: 1px solid #fff;
-width: 60px;
-height: 60px;
-border-radius: 50%;
-/*はじめは不透明*/
-opacity:1;
-/*アニメーションの設定*/
-animation:1s circleanime2 forwards;
+    content: '';
+    /*絶対配置で波形の位置を決める*/
+    position: absolute;
+    left: 30%;
+    top: 0;
+    /*波形の形状*/
+    border: 1px solid #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    /*はじめは不透明*/
+    opacity: 1;
+    /*アニメーションの設定*/
+    animation: 1s circleanime2 forwards;
 }
 
 
 /*波形が広がるアニメーション*/
-@keyframes circleanime2{
-0%{
-transform: scale(0);
-}
-100%{
-transform:scale(2);
-opacity: 0;
-}
+@keyframes circleanime2 {
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(2);
+        opacity: 0;
+    }
 }
 
 /*==================================================
 スライダーのためのcss
 ===================================*/
 
-/*画像の横幅を100%にしてレスポンシブ化*/
-img{
-	width: 100%;
-	height: auto;
-	vertical-align: bottom;/*画像の下にできる余白を削除*/
+img {
+    width: 100%;
+    height: auto;
+    vertical-align: bottom;
+    /*画像の下にできる余白を削除*/
 }
 
 /*メイン画像下に余白をつける*/
-.gallery{
-	margin:0 0 5px 0;
+.gallery {
+    margin: 0 0 5px 0;
 }
 
-.gallery li{
-list-style:none;
-}
 /*矢印の設定*/
 
 /*戻る、次へ矢印の位置*/
-.slick-prev, 
+.slick-prev,
 .slick-next {
-    position: absolute;/*絶対配置にする*/
-	z-index: 3;
+    position: absolute;
+    /*絶対配置にする*/
+    z-index: 3;
     top: 42%;
-    cursor: pointer;/*マウスカーソルを指マークに*/
-    outline: none;/*クリックをしたら出てくる枠線を消す*/
-    border-top: 2px solid #ccc;/*矢印の色*/
-    border-right: 2px solid #ccc;/*矢印の色*/
+    cursor: pointer;
+    /*マウスカーソルを指マークに*/
+    outline: none;
+    /*クリックをしたら出てくる枠線を消す*/
+    border-top: 2px solid #ccc;
+    /*矢印の色*/
+    border-right: 2px solid #ccc;
+    /*矢印の色*/
     height: 25px;
     width: 25px;
 }
 
-.slick-prev {/*戻る矢印の位置と形状*/
-    left:2.5%;
+.slick-prev {
+    /*戻る矢印の位置と形状*/
+    left: 2.5%;
     transform: rotate(-135deg);
 }
 
-.slick-next {/*次へ矢印の位置と形状*/
-    right:2.5%;
+.slick-next {
+    /*次へ矢印の位置と形状*/
+    right: 2.5%;
     transform: rotate(45deg);
 }
 
 /*選択するサムネイル画像の設定*/
 
-.choice-btn li{
-	cursor: pointer;
-	outline: none;
-	background:#333;
-list-style:none;
+.choice-btn li {
+    cursor: pointer;
+    outline: none;
+    background: #333;
 }
 
-.choice-btn li img{
-	opacity: 0.4;/*選択されていないものは透過40%*/
+.choice-btn li img {
+    opacity: 0.4;
+    /*選択されていないものは透過40%*/
 }
 
-.choice-btn li.slick-current img{
-	opacity: 1;/*選択されているものは透過しない*/
+.choice-btn li.slick-current img {
+    opacity: 1;
+    /*選択されているものは透過しない*/
 }
